# rust_mcp

./: Cargo.toml  README.md  klave.json
apps/rust_mcp/: Cargo.toml
apps/rust_mcp/src/: bindings.rs  lib.rs
apps/rust_mcp/wit/: world.wit
