[package]
name = "rust_mcp"
version = "0.1.0"
authors = ["Edward Boggis-Rolfe <edward@boggis-rolfe.com>"]
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
serde_json = "1.0.140"
klave = "0.4.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:rust-mcp"

